# DynSynpy

./: .gitignore  Dorchester.kml  README.md  Untitled.ipynb  pyproject.toml  test.ipynb
.ipynb_checkpoints/: test-checkpoint.ipynb
dynsyspy/: globalsyms.py  main.py  plot.py  problem.py  system.py
dynsyspy/.ipynb_checkpoints/: main-checkpoint.py  problem-checkpoint.py
dynsyspy/solver/: custom.py  sympy_.py
dynsyspy/types/: problem.py
notebooks/: test.ipynb
notebooks/.ipynb_checkpoints/: test-checkpoint.ipynb
tests/testsystem/: test_models.py
